# Karate-Student-Manager

./: .gitignore  Cargo.toml  README.md  build.rs  seed.py
.github/workflows/: main.yml
assets/: tailwind.css
database/: database.db
src/: main.rs  models.rs  my_app.rs  views.rs
src/components/: datatable.rs  filter.rs  mod.rs  searchbar.rs  sidebar.rs
